# odoo-helper-cli

./: LICENSE  README.md  pyproject.toml
src/odoo_helper_cli/: cli.py
src/odoo_helper_cli/api/: __init__.py
src/odoo_helper_cli/db/: __init__.py
src/odoo_helper_cli/logs/: __init__.py
src/odoo_helper_cli/migrate/: __init__.py
src/odoo_helper_cli/report/: __init__.py
